--- a/index.html
+++ b/index.html
@@ -35,6 +35,9 @@
             </tr>
         </table>
     </div>
-      
+    <div class="alert alert-success alert-dismissible m-5">
+        <button type="button" class="btn-close" data-bs-dismiss="alert"></button>
+        <strong>Success!</strong> This alert box could indicate a successful or positive action.
+      </div>
 </body>
 </html>
