--- a/index.html
+++ b/index.html
@@ -36,8 +36,9 @@
         </table>
     </div>
     <div class="alert alert-success alert-dismissible m-5">
-        <button type="button" class="btn-close" data-bs-dismiss="alert"></button>
+        <button type="button" class="btn-close" data-bs-dismiss="alert">Button</button>
         <strong>Success!</strong> This alert box could indicate a successful or positive action.
       </div>
+      <h2> This is for practices ... </h2>
 </body>
 </html>
