--- a/index.html
+++ b/index.html
@@ -39,6 +39,6 @@
         <button type="button" class="btn-close" data-bs-dismiss="alert">Button</button>
         <strong>Success!</strong> This alert box could indicate a successful or positive action.
       </div>
-      <h2> This is for practices ... </h2>
+      <h2> This is for practices ...Now What you say.. </h2>
 </body>
 </html>
