--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
         </table>
     </div>
     <div class="alert alert-success alert-dismissible m-5">
-        <button type="button" class="btn-close" data-bs-dismiss="alert"></button>
+        <button type="button" class="btn-close" data-bs-dismiss="alert">#</button>
         <strong>Success!</strong> This alert box could indicate a successful or positive action.
-      </div>
+    </div>
 </body>
 </html>
